crates/analyzer/tests/snapshots/errors__undefined_type_param.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: undefined type
  ┌─ compile_errors/undefined_type_param.fe:4:8
  │
4 │     x: MysteryType
  │        ^^^^^^^^^^^ `MysteryType` has not been defined

error: undefined type
  ┌─ compile_errors/undefined_type_param.fe:8:19
  │
8 │     pub fn a(val: DoesntExist):
  │                   ^^^^^^^^^^^ `DoesntExist` has not been defined


